--- a/src/main/resources/static/html/actualSales.html
+++ b/src/main/resources/static/html/actualSales.html
@@ -18,7 +18,7 @@
 						<dd><a href="##" id="business-plan-report">Report</a></dd>
 					</dl>
 				</li>
-				<li class="layui-nav-item layui-this">
+				<li class="layui-nav-item layui-this" id="actual-sales">
 					<a href="actualSales.html">Actual Sales</a>
 					<dl class="layui-nav-child">
 						<dd><a href="##" id="actual-sales-creating">Creating</a></dd>
@@ -103,7 +103,7 @@
 					<label class="layui-form-label layui-icon layui-icon-date" style="font-size: 25px;color: rgba(224, 48, 30, 1);"></label>
 					<div class="layui-inline year-change">
 						<div class="layui-input-inline">
-							<input type="text" class="layui-input" id="report-year" placeholder="年份">
+							<input type="text" class="layui-input" id="actual-sales-report-year" placeholder="年份">
 						</div>
 					</div>
 				</div>
@@ -111,59 +111,59 @@
 				<button class="upload-plan" id="export">Export</button>
 			</div>
 
-			<div class="bottom-business-plan-report-part">
-				<div class="creat-title">Business Plan Report</div>
-				<div class="business-plan-sousuo-all">
-					<form class="layui-form layui-form-pane" id="business-plan-sousuo" action="">
+			<div class="bottom-actual-sales-report-part">
+				<div class="creat-title">Actual Sales Report</div>
+				<div class="actual-sales-sousuo-all">
+					<form class="layui-form layui-form-pane" id="actual-sales-sousuo" action="">
 						<div class="layui-form-item">
-							<label class="layui-form-label business-plan-sousuo-label">Category</label>
-							<div class="layui-input-inline business-plan-sousuo-select">
+							<label class="layui-form-label actual-sales-sousuo-label">Category</label>
+							<div class="layui-input-inline actual-sales-sousuo-select">
 								<select name="quiz1" id="category" lay-filter="category" multiple lay-search lay-omit lay-tools>
 									<option value="">ALL</option>
 								</select>
 							</div>
 						</div>
 						<div class="layui-form-item" >
-							<label class="layui-form-label business-plan-sousuo-label">BP Name</label>
-							<div class="layui-input-inline business-plan-sousuo-select">
+							<label class="layui-form-label actual-sales-sousuo-label">BP Name</label>
+							<div class="layui-input-inline actual-sales-sousuo-select">
 								<select name="quiz1" id="bpName" lay-filter="bpName"  multiple lay-search lay-omit lay-tools>
 									<option value="">ALL</option>
 								</select>
 							</div>
 						</div>
 						<div class="layui-form-item" >
-							<label class="layui-form-label business-plan-sousuo-label">Brand</label>
-							<div class="layui-input-inline business-plan-sousuo-select">
+							<label class="layui-form-label actual-sales-sousuo-label">Brand</label>
+							<div class="layui-input-inline actual-sales-sousuo-select">
 								<select name="quiz1" id="brand" lay-filter="brand" multiple lay-search lay-omit lay-tools>
 									<option value="">ALL</option>
 								</select>
 							</div>
 						</div>
 						<div class="layui-form-item">
-							<label class="layui-form-label business-plan-sousuo-label">PP Name</label>
-							<div class="layui-input-inline business-plan-sousuo-select">
+							<label class="layui-form-label actual-sales-sousuo-label">PP Name</label>
+							<div class="layui-input-inline actual-sales-sousuo-select">
 								<select name="quiz1" id="ppName" lay-filter="ppName" multiple lay-search lay-omit lay-tools>
 									<option value="">ALL</option>
 								</select>
 							</div>
 						</div>
 						<div class="layui-form-item" >
-							<label class="layui-form-label business-plan-sousuo-label">BG</label>
-							<div class="layui-input-inline business-plan-sousuo-select">
+							<label class="layui-form-label actual-sales-sousuo-label">BG</label>
+							<div class="layui-input-inline actual-sales-sousuo-select">
 								<select name="quiz1" id="bg" lay-filter="bg" multiple lay-search lay-omit lay-tools>
 									<option value="">ALL</option>
 								</select>
 							</div>
 						</div>
 						<div class="layui-form-item">
-							<button type="button" class="business-plan-sousuo-btn" id="inquireBusinessPlanReport">查询</button>
+							<button type="button" class="actual-sales-sousuo-btn" id="inquireActualSalesReport">查询</button>
 						</div>
 					</form>
 				</div>
 				<div class="report-data">
-					<table class="layui-hide" id="business-plan-report-data-table"></table>
+					<table class="layui-hide" id="actual-sales-report-data-table"></table>
 				</div>
-				<div id="business-plan-report-page"></div>
+				<div id="actual-sales-report-page"></div>
 			</div>
 		</div>
 
